--- a/style.css
+++ b/style.css
@@ -2,3 +2,110 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.animation {
+  position: relative;
+  height: 50vh;
+  width: 50vw;
+  border-bottom: 3px solid black;
+  overflow: hidden;
+}
+
+.car {
+  position: absolute;
+  left: 10vw;
+  bottom: 0;
+  z-index: 10;
+}
+
+@keyframes passbytree {
+  form {
+    bottom: -100px;
+    right: 0;
+  }
+  to {
+    bottom: 0;
+    right: 100%;
+  }
+}
+
+.tree {
+  position: absolute;
+  animation-name: passbytree;
+  bottom: 0;
+  right: -100px;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  z-index: 3;
+}
+
+img {
+  height: auto;
+  width: 10vw;
+}
+
+@keyframes passbygrass {
+  from {
+    right: -200px;
+    bottom: 0;
+  }
+  to {
+    right: 125%;
+    bottom: 0;
+  }
+}
+
+.grass {
+  position: absolute;
+  animation-name: passbygrass;
+  bottom: 0;
+  right: -200px;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-delay: 2s;
+  z-index: 5;
+}
+
+.mountain {
+  position: absolute;
+  animation-name: passbymountain;
+  bottom: -15vh;
+  right: -450px;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-delay: 3s;
+  z-index: 1;
+}
+
+@keyframes passbymountain {
+  from {
+    right: -4500px;
+  }
+  to {
+    right: 100%;
+  }
+}
+
+.guy {
+  position: absolute;
+  bottom: 0px;
+  left: 20vw;
+  animation-name: crush;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  z-index: 99;
+}
+
+@keyframes crush {
+  from {
+    left: 20vw;
+    bottom: 0;
+  }
+  to {
+    left: 0;
+    bottom: 100%;
+    height: 1vh;
+    width: auto;
+    transform: rotate(360deg);
+  }
+}
